syntax = "proto3";
package deltaswapio.deltachain.deltaswap;

option go_package = "github.com/deltaswapio/deltachain/x/deltaswap/types";

import "gogoproto/gogo.proto";


message Config {
  uint64 phylax_set_expiration = 1;
  bytes governance_emitter = 2;
  uint32 governance_chain = 3;
  uint32 chain_id = 4;
}
