syntax = "proto3";
package deltaswapio.deltachain.deltaswap;

import "deltaswap/phylax.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/deltaswapio/deltachain/x/deltaswap/types";

// PhylaxSetUpdateProposal defines a phylax set update governance proposal
message PhylaxSetUpdateProposal {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  string title       = 1;
  string description = 2;
  PhylaxSet newPhylaxSet = 3 [(gogoproto.nullable) = false];
}

// GovernanceDeltaswapMessageProposal defines a governance proposal to emit a generic message in the governance message
// format.
message GovernanceDeltaswapMessageProposal {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  string title       = 1;
  string description = 2;
  uint32 action = 3;
  bytes module = 4;
  uint32 targetChain = 5;
  bytes payload = 6;
}
